[Sync] NonBlocking type registration clear instead of crashes when also registered as pssive.

BUG=634388

Review-Url: https://codereview.chromium.org/2342353004
Cr-Commit-Position: refs/heads/master@{#419892}

Former-commit-id: 49c3f34edcbac33f3ad22dad393a6dfd2123c645